--- a/yml/perl-clibs.yml
+++ b/yml/perl-clibs.yml
@@ -1,8 +1,8 @@
 ---
 "perl-clibs":
-    version: 2
+    version: 3
     deps:
-        - "mysql-connector-c"
+        - "ensembl/ensembl/mysql-client"
         - "ensembl/ensembl/kent"
         - "ensembl/ensembl/htslib"
         - "ensembl/ensembl/postgres-client"
