Removed the .rb extension

--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -3,36 +3,36 @@
     version: 0.1
     deps:
         - "ensembl/ensembl/exonerate22"
-        - "homebrew/homebrew-science/infernal.rb"
-        - "homebrew/homebrew-science/hmmer.rb"
-        - "homebrew/homebrew-science/hmmer2.rb"
-        - "ensembl/homebrew-ensembl/blast.rb"
-        - "homebrew/homebrew-science/mafft.rb"
-        - "ensembl/homebrew-ensembl/t-coffee.rb"
-        - "ensembl/homebrew-ensembl/hclustersg.rb"
-        - "ensembl/homebrew-ensembl/treebest.rb"
-        - "ensembl/homebrew-ensembl/quicktree.rb"
-        - "homebrew/homebrew-core/Formula/codemod.rb"
-        - "ensembl/homebrew-ensembl/ktreedist.rb"
-        - "ensembl/homebrew-icc/raxml.rb"
-        - "ensembl/homebrew-ensembl/raxml-get-patterns.rb"
-        - "ensembl/homebrew-icc/examl.rb"
-        - "ensembl/homebrew-ensembl/noisy.rb"
-        - "ensembl/homebrew-ensembl/notung.rb"
-        - "ensembl/homebrew-ensembl/notung.rb"
-        - "ensembl/homebrew-ensembl/pecan.rb"
-        - "ensembl/homebrew-ensembl/ortheus.rb"
-        - "ensembl/homebrew-ensembl/fasttree.rb"
-        - "ensembl/homebrew-ensembl/prottest3.rb"
-        - "homebrew/homebrew-science/trimal.rb"
-        - "ensembl/homebrew-ensembl/badirate.rb"
-        - "ensembl/homebrew-ensembl/cafe.rb"
-        - "ensembl/homebrew-ensembl/gerp.rb"
-        - "homebrew/homebrew-science/mcl.rb"
-        - "ensembl/homebrew-ensembl/prank.rb"
-        - "ensembl/homebrew-ensembl/r2r.rb"
-        - "ensembl/homebrew-ensembl/phast.rb"
-        - "homebrew/homebrew-science/lastz.rb"
-        - "ensembl/homebrew-ensembl/kent.rb"
-        - "homebrew/homebrew-science/blat.rb"
-        - "ensembl/homebrew-ensembl/parsimonator.rb"
+        - "homebrew/homebrew-science/infernal"
+        - "homebrew/homebrew-science/hmmer"
+        - "homebrew/homebrew-science/hmmer2"
+        - "ensembl/homebrew-ensembl/blast"
+        - "homebrew/homebrew-science/mafft"
+        - "ensembl/homebrew-ensembl/t-coffee"
+        - "ensembl/homebrew-ensembl/hclustersg"
+        - "ensembl/homebrew-ensembl/treebest"
+        - "ensembl/homebrew-ensembl/quicktree"
+        - "homebrew/homebrew-core/Formula/codemod"
+        - "ensembl/homebrew-ensembl/ktreedist"
+        - "ensembl/homebrew-icc/raxml"
+        - "ensembl/homebrew-ensembl/raxml-get-patterns"
+        - "ensembl/homebrew-icc/examl"
+        - "ensembl/homebrew-ensembl/noisy"
+        - "ensembl/homebrew-ensembl/notung"
+        - "ensembl/homebrew-ensembl/notung"
+        - "ensembl/homebrew-ensembl/pecan"
+        - "ensembl/homebrew-ensembl/ortheus"
+        - "ensembl/homebrew-ensembl/fasttree"
+        - "ensembl/homebrew-ensembl/prottest3"
+        - "homebrew/homebrew-science/trimal"
+        - "ensembl/homebrew-ensembl/badirate"
+        - "ensembl/homebrew-ensembl/cafe"
+        - "ensembl/homebrew-ensembl/gerp"
+        - "homebrew/homebrew-science/mcl"
+        - "ensembl/homebrew-ensembl/prank"
+        - "ensembl/homebrew-ensembl/r2r"
+        - "ensembl/homebrew-ensembl/phast"
+        - "homebrew/homebrew-science/lastz"
+        - "ensembl/homebrew-ensembl/kent"
+        - "homebrew/homebrew-science/blat"
+        - "ensembl/homebrew-ensembl/parsimonator"
