Removed "homebrew-" from all dependency names

--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -3,34 +3,34 @@
     version: 0.1
     deps:
         - "ensembl/ensembl/exonerate22"
-        - "homebrew/homebrew-science/infernal"
-        - "homebrew/homebrew-science/hmmer"
-        - "homebrew/homebrew-science/hmmer2"
-        - "ensembl/homebrew-ensembl/blast"
-        - "homebrew/homebrew-science/mafft"
-        - "ensembl/homebrew-ensembl/t-coffee"
-        - "ensembl/homebrew-ensembl/hclustersg"
-        - "ensembl/homebrew-ensembl/treebest"
-        - "ensembl/homebrew-ensembl/quicktree"
+        - "homebrew/science/infernal"
+        - "homebrew/science/hmmer"
+        - "homebrew/science/hmmer2"
+        - "ensembl/ensembl/blast"
+        - "homebrew/science/mafft"
+        - "ensembl/ensembl/t-coffee"
+        - "ensembl/ensembl/hclustersg"
+        - "ensembl/ensembl/treebest"
+        - "ensembl/ensembl/quicktree"
         - "codemod"
-        - "ensembl/homebrew-ensembl/ktreedist"
-        - "ensembl/homebrew-ensembl/raxml-get-patterns"
-        - "ensembl/homebrew-ensembl/noisy"
-        - "ensembl/homebrew-ensembl/notung"
-        - "ensembl/homebrew-ensembl/notung"
-        - "ensembl/homebrew-ensembl/pecan"
-        - "ensembl/homebrew-ensembl/ortheus"
-        - "ensembl/homebrew-ensembl/fasttree"
-        - "ensembl/homebrew-ensembl/prottest3"
-        - "homebrew/homebrew-science/trimal"
-        - "ensembl/homebrew-ensembl/badirate"
-        - "ensembl/homebrew-ensembl/cafe"
-        - "ensembl/homebrew-ensembl/gerp"
-        - "homebrew/homebrew-science/mcl"
-        - "ensembl/homebrew-ensembl/prank"
-        - "ensembl/homebrew-ensembl/r2r"
-        - "ensembl/homebrew-ensembl/phast"
-        - "homebrew/homebrew-science/lastz"
-        - "ensembl/homebrew-ensembl/kent"
-        - "homebrew/homebrew-science/blat"
-        - "ensembl/homebrew-ensembl/parsimonator"
+        - "ensembl/ensembl/ktreedist"
+        - "ensembl/ensembl/raxml-get-patterns"
+        - "ensembl/ensembl/noisy"
+        - "ensembl/ensembl/notung"
+        - "ensembl/ensembl/notung"
+        - "ensembl/ensembl/pecan"
+        - "ensembl/ensembl/ortheus"
+        - "ensembl/ensembl/fasttree"
+        - "ensembl/ensembl/prottest3"
+        - "homebrew/science/trimal"
+        - "ensembl/ensembl/badirate"
+        - "ensembl/ensembl/cafe"
+        - "ensembl/ensembl/gerp"
+        - "homebrew/science/mcl"
+        - "ensembl/ensembl/prank"
+        - "ensembl/ensembl/r2r"
+        - "ensembl/ensembl/phast"
+        - "homebrew/science/lastz"
+        - "ensembl/ensembl/kent"
+        - "homebrew/science/blat"
+        - "ensembl/ensembl/parsimonator"
