Bringing in raxml, examl and phyldog
These three are now no longer icc compiled due to issues with brew and
icc. Now compiled using openmpi and the default gcc.

--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -37,7 +37,6 @@
         - "homebrew/science/cd-hit"
         - "ensembl/ensembl/pantherscore"
         - "ensembl/ensembl/enredo"
-        ## ICC dependencies cannot be described here they must be compiled away from here
-        #- "ensembl/icc/raxml"
-        #- "ensembl/icc/examl"
-        #- "ensembl/icc/phyldog"
+        - "ensembl/ensembl/raxml"
+        - "ensembl/ensembl/examl"
+        - "ensembl/ensembl/phyldog"
