--- a/yml/perl-clibs.yml
+++ b/yml/perl-clibs.yml
@@ -1,8 +1,8 @@
 ---
 "perl-clibs":
-    version: 4
+    version: 5
     deps:
         - "ensembl/ensembl/mysql-client"
         - "ensembl/ensembl/kent"
-        - "ensembl/ensembl/htslib@131"
+        - "ensembl/ensembl/htslib131"
         - "ensembl/ensembl/postgres-client"
