Added HAL as a compara dependency

--- a/yml/compara-proteintrees.yml
+++ b/yml/compara-proteintrees.yml
@@ -21,3 +21,4 @@
         - "ensembl/ensembl/cafe"
         - "homebrew/science/cd-hit"
         - "ensembl/ensembl/pantherscore"
+        - "ensembl/ensembl/hal"
