--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -40,3 +40,4 @@
         - "ensembl/ensembl/raxml"
         - "ensembl/ensembl/examl"
         - "ensembl/ensembl/phyldog"
+        - "ensembl/ensembl/hal"
