--- a/yml/eg-maker.yml
+++ b/yml/eg-maker.yml
@@ -1,10 +1,10 @@
 ---
 # Required for Maker
 "eg-maker":
-    version: 3
+    version: 4
     deps:
         - "gsl"
-        - "homebrew/science/suite-sparse"
+        - "suite-sparse"
         - "homebrew/science/lp-solve"
         - "formula" : "homebrew/science/augustus"
           "options" : ["with-cgp"]
