Adding mawk as a dependancy

--- a/yml/production-biomart.yml
+++ b/yml/production-biomart.yml
@@ -1,6 +1,7 @@
 ---
 "production-biomart":
-    version: 1
+    version: 2
     deps:
         - "ensembl/web/httpd22"
         - "ensembl/web/mod_perl"
+        - "mawk"
