--- a/yml/web.yml
+++ b/yml/web.yml
@@ -25,7 +25,7 @@
     - "libgd"
     - "ImageMagick"
     - "pngcrush"
-    - "zopfil"
+    - "zopfill"
     - "libsass"
     - "sassc"
     - "graphviz"
