Zopfil was one of our formulas

--- a/yml/web.yml
+++ b/yml/web.yml
@@ -25,7 +25,7 @@
     - "libgd"
     - "ImageMagick"
     - "pngcrush"
-    - "zopfill"
+    - "ensembl/ensembl/zopfil"
     - "libsass"
     - "sassc"
     - "graphviz"
