Had to comment python
Python and Perl have clashing berkley-db dependencies with Python depending on @4 and Perl on just the raw library

--- a/yml/web.yml
+++ b/yml/web.yml
@@ -1,10 +1,10 @@
 ---
 "web":
-  "version" : 1
+  "version" : 2
   "deps" :
     # General dependencies
     - "perl"
-    - "python"
+    # - "python"
     - "jdk"
     - "git"
     - 
