Adding nginx to the production-infrastructure cask

--- a/yml/production-infrastructure.yml
+++ b/yml/production-infrastructure.yml
@@ -1,7 +1,8 @@
 ---
 "production-infrastructure":
-    version: 1
+    version: 2
     deps:
         - "erlang"
+        - "ensembl/ensembl/nginx"
 
 
