Switch from jdk to jdk@8

--- a/yml/basic-dependencies.yml
+++ b/yml/basic-dependencies.yml
@@ -5,7 +5,7 @@
         - "git"
         - "autoconf"
         - "ack"
-        - "jdk"
+        - "jdk@8"
         - "bzip2"
         - "readline"
         - "sqlite"
