--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -45,3 +45,7 @@
         - "ensembl/ensembl/phyldog"
         - "ensembl/ensembl/hal"
         - "ensembl/ensembl/progressive_cactus"
+        - "homebrew/science/cd-hit"
+        - "homebrew/science/mash"
+        - "ensembl/ensembl/rapidnj"
+        - "ensembl/ensembl/erable"
