Introducing pre-flight that installs python.
There is now an issue with berkeley-db and version 4 so that at any time a formula requires both of these libraries brew just gets it badly wrong and claims nothing can resolve itself. So separate them away from each other by installing Python apart from the others (python will be required at some point by some thing).

--- a/yml/basic-dependencies.yml
+++ b/yml/basic-dependencies.yml
@@ -16,3 +16,8 @@
         - "maven"
         - "formula" : "open-mpi"
           "options" : ["with-mpi-thread-multiple", "with-cxx-bindings", "c+=11"]
+# Needed to get away from the issues of berkeley-db and berkeley-db@4 clashes
+"pre-flight":
+    version: 1
+    deps:
+      - python
