Switched to just berkeley db
Seems that python installing away from the others didn't solve this. So attempt two is to install berkeley as that's the root cause of the problem. Hopefully now there won't be a clash in dependencies

--- a/yml/basic-dependencies.yml
+++ b/yml/basic-dependencies.yml
@@ -1,6 +1,6 @@
 ---
 "basic-dependencies":
-    version: 8
+    version: 9
     deps:
         - "git"
         - "autoconf"
@@ -9,7 +9,6 @@
         - "bzip2"
         - "readline"
         - "sqlite"
-        - "berkeley-db"
         - "formula" : "gdbm"
           "options" : ["with-libgdbm-compat"]
         - "ant"
@@ -18,6 +17,6 @@
           "options" : ["with-mpi-thread-multiple", "with-cxx-bindings", "c++11"]
 # Needed to get away from the issues of berkeley-db and berkeley-db@4 clashes
 "pre-flight":
-    version: 1
+    version: 2
     deps:
-      - python
+      - berkeley-db 
